# MyNotes

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  config.py  gmon.out  main.py  package.json  pyproject.toml  requirements.txt
.run/: build-prod.run.xml  export-dev.run.xml  export.run.xml
docs/: index.html
docs/bash/: building_params.html
docs/multimedia/: ffmpeg_mosaic.html  ffmpeg_scenes.html  svg2png.html
docs/numpy/: indexing.html
docs/pandas/: filtering.html  shift.html
docs/pandas+numpy+scipy/: filtering.html  indexing.html  shift.html
docs/python_strategies/: bit_fields.html  deferred_imports.html  dictionary_tricks.html  fakedata.html  functional_programming.html  generator_coroutines.html  pytest_fixtures.html  regex_cheatsheet.html  regex_groups.html  unicode.html
docs/regex/: cheatsheet.html
docs/strategies/: bit_fields.html  bitfields.html  fakedata.html  functional_programming.html
docs/strings/: regex_cheatsheet.html  regex_groups.html  unicode.html
docs/terminal/: custom_getpass.html  windows_whereis.html
docs/web/: cors_web_server.html
docs/windows/: custom_getpass.html  windows_whereis.html
mynotes/: __init__.py  config.py  gmon.out
mynotes/export/: __init__.py
mynotes/notes_exporter/: __init__.py
mynotes/pages/: index.html
mynotes/src/: index.js  package.json  webpack.config.js
mynotes/templates/: base.html  head.html  macros.html  note_base.html  note_head.html  note_tail.html  tail.html
mynotes/tests/: test_codescan.py
mynotes/utils/: __init__.py  codescan.py  convert.py  hasher.py  my_exporter.py  preprocess.py  static_handler.py
notes/bash/: building_params.ipynb
notes/multimedia/: ffmpeg_scenes.ipynb
scripts/: add_dt_tags.py  export.py  web_server.py
utils/: __init__.py  my_exporter.py  nb_parse.py
web_src/: index.js  package-lock.json  webpack.config.js
(+87 files in other folders)
