[project]
name = "mynotes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "jinja2>=3.1.6",
    "lxml>=5.4.0",
    "nbconvert>=7.16.6",
    "notebook>=7.4.2",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "regex>=2024.11.6",
    "sqlalchemy>=2.0.41",
    "toolz>=1.0.0",
    "mynotes-exporter",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.11",
]

[tool.uv.sources]
mynotes_exporter = {path = "../MyNotesExporter", editable =true}

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I001", "UP", "ANN", "B", "C", "I", "LOG", "G", "RSE", "RET", "SLOT", "SIM", "TC", "INT", "ARG",
    "PTH", "ERA", "PL", "TRY", "FLY", "RUF", "FA"]
ignore = ["ANN002", "ANN003", "ANN401", "ANN204", "ANN201", "ANN202", "ARG002", "TRY003", "C901", "PLR0915", "PLR0912", "PLR0911"]

[tool.ruff.lint.flake8-annotations]
suppress-dummy-args = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "I001"]